--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "primeicons/primeicons.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -27,14 +28,14 @@
   max-width: 1280px;
   max-height: 1440px;
   margin: 1rem;
-  padding: 1rem;
+  padding: 0.25rem;
   text-align: center;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #ffe7e7;
   }
 
   a:hover {
