--- a/src/style.css
+++ b/src/style.css
@@ -16,14 +16,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-} */
-
 #app {
   max-width: 1280px;
   max-height: 1440px;
@@ -35,14 +27,6 @@
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffe7e7;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
   }
 }
