--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,9 @@
 @import "primeicons/primeicons.css";
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,8 +19,6 @@
 }
 
 #app {
-  max-width: 1280px;
-  max-height: 1440px;
   margin: 1rem;
   padding: 0.25rem;
   text-align: center;
